--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "scss": "sass --watch ./private/scss/:./public/css/ --style=compressed"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "eslint": "8.39.0",
     "prettier": "^2.8.7",
-    "eslint-config-next": "13.3.1"
+    "eslint-config-next": "13.3.1",
+    "sass": "^1.62.1"
   }
 }
