--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
   "homepage": "https://github.com/Michallesss/NudeWeb#readme",
   "dependencies": {
     "next": "13.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "eslint": "8.39.0",
-    "prettier": "^2.8.7",
     "eslint-config-next": "13.3.1",
+    "prettier": "^2.8.7",
     "sass": "^1.62.1"
   }
 }
