--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/Michallesss/NudeWeb#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "13.3.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
