--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/Michallesss/NudeWeb#readme",
   "dependencies": {
     "axios": "^1.4.0",
-    "next": "13.3.1",
+    "next": "^13.5.6",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
