--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/Michallesss/NudeWeb#readme",
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.3.0",
     "axios": "^1.4.0",
     "next": "^13.5.6",
     "nextjs-progressbar": "^0.0.16",
