--- a/package.json
+++ b/package.json
@@ -31,15 +31,16 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.3.0",
     "axios": "^1.4.0",
-    "next": "^13.5.6",
+    "jest": "^29.7.0",
+    "next": "^14.0.3",
     "nextjs-progressbar": "^0.0.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
     "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
+    "eslint-config-next": "^14.0.3",
     "prettier": "^2.8.7",
     "sass": "^1.62.1"
   }
